--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,12 @@ description: A responsive site template designed by HTML5 Up<br /> and released 
 baseurl: # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
-street_address: 1234 Somewhere Road
-city: Nashville
-state: TN
-zip_code: 55555
-country: United States of America
+street_address: 
+city: 
+state: 
+zip_code: 
+country: 
+email: 
 phone: 
 
 # homepage tiles
@@ -20,15 +21,15 @@ tiles-count: 6
 # see https://fontawesome.com/icons?d=gallery&p=2&s=brands
 # Icons are not shown if value is empty
 # You need to restart jekyll for changes to have an effect
-socials:
-  GitHub: https://github.com/andrewbanchich
-  GitLab:
-  Google-Plus: https://plus.google.com/u/0/+AndrewBanchich
-  Instagram:
-  LinkedIn: https://www.linkedin.com/in/andrew-banchich-a4ba1195
-  Twitter: https://twitter.com/andrewbanchich
-  Facebook:
-  Slack:
+# socials:
+#   GitHub: https://github.com/andrewbanchich
+#   GitLab:
+#   Google-Plus: https://plus.google.com/u/0/+AndrewBanchich
+#   Instagram:
+#   LinkedIn: https://www.linkedin.com/in/andrew-banchich-a4ba1195
+#   Twitter: https://twitter.com/andrewbanchich
+#   Facebook:
+#   Slack:
 
 # build settings
 markdown: kramdown
