--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # site settings
 title: Teacher Matt
 subtitle: English Expert
-description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
+description: Proven results, flexible scheduling. Boost your English skills now!
 baseurl: # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
