--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # site settings
 title: Teacher Matt
-subtitle: English Expert
+subtitle: 
 description: Proven results, flexible scheduling. Boost your English skills now!
 baseurl: # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
