--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,13 @@ tiles-count: 6
 # see https://fontawesome.com/icons?d=gallery&p=2&s=brands
 # Icons are not shown if value is empty
 # You need to restart jekyll for changes to have an effect
-# socials:
+socials:
 #   GitHub: https://github.com/andrewbanchich
 #   GitLab:
 #   Google-Plus: https://plus.google.com/u/0/+AndrewBanchich
 #   Instagram:
 #   LinkedIn: https://www.linkedin.com/in/andrew-banchich-a4ba1195
-#   Twitter: https://twitter.com/andrewbanchich
+   Twitter: https://twitter.com/andrewbanchich
 #   Facebook:
 #   Slack:
 
