--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,8 @@ socials:
 #   Google-Plus: https://plus.google.com/u/0/+AndrewBanchich
 #   Instagram:
 #   LinkedIn: https://www.linkedin.com/in/andrew-banchich-a4ba1195
-   Twitter: https://twitter.com/andrewbanchich
+#   Twitter: https://twitter.com/andrewbanchich
+   YouTube: https://www.youtube.com/@matthewschultz3621
 #   Facebook:
 #   Slack:
 
